# VMK-labs

./: .gitignore  CMakeLists.txt  README.md  SNDT.h  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  labs.cpp  labs.h  main.cpp  test.data
